--- a/foxy.html
+++ b/foxy.html
@@ -5,9 +5,10 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
-		<title>FOXY BIDS</title>
+		<title>FoxyBids</title>
 		<meta name="description" content="Project description">
 		<link rel="stylesheet" href="css/style.css" />
+
 		<script src="js/vendor/modernizr.js"></script>
 		<!--[if lt IE 9]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -41,8 +42,73 @@
 			</div>
 		</header>
 
-		<section class="slider">
+		<section class="main-carousel" data-bg="img/carousel-bg.jpg">
+			<div class="row">
+				<div class="small-12 columns">
 
+					<!-- masterslider -->
+					<div class="ms-caro3d-template">
+						<div class="master-slider" id="masterslider">
+						    <div class="ms-slide featured">
+								<div class="row">
+									<div class="small-6 medium-7 columns">
+										<h2>Auction Name</h2>
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim</p>
+										<a href="#" class="button" title="Find out more">Find out more</a>
+									</div>
+									<div class="small-6 medium-5 columns">
+										<a href="#" title="Auction Name">
+											<img src="img/carousel-default-img.jpg" alt="Auction Name" />
+										</a>
+										<div class="timer-wrap">
+											<span>Time left: </span>
+											<div class="timer">123</div>
+										</div>
+									</div>
+								</div>
+						    </div>
+						    <div class="ms-slide popular">
+								<div class="row">
+									<div class="small-6 medium-7 columns">
+										<h2>Auction Name</h2>
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim</p>
+										<a href="#" class="button" title="Find out more">Find out more</a>
+									</div>
+									<div class="small-6 medium-5 columns">
+										<a href="#" title="Auction Name">
+											<img src="img/carousel-default-img.jpg" alt="Auction Name" />
+										</a>
+										<div class="timer-wrap">
+											<span>Time left: </span>
+											<div class="timer" data-time="June 18, 2015 12:15:42"></div>
+										</div>
+									</div>
+								</div>
+						    </div>
+						    <div class="ms-slide last-one">
+								<div class="row">
+									<div class="small-6 medium-7 columns">
+										<h2>Auction Name</h2>
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minimeiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim</p>
+										<a href="#" class="button" title="Find out more">Find out more</a>
+									</div>
+									<div class="small-6 medium-5 columns">
+										<a href="#" title="Auction Name">
+											<img src="img/carousel-default-img.jpg" alt="Auction Name" />
+										</a>
+										<div class="timer-wrap">
+											<span>Time left: </span>
+											<div class="timer" data-time="June 28, 2015 12:15:42"></div>
+										</div>
+									</div>
+								</div>
+						    </div>
+						</div>
+					</div>
+					<!-- end of masterslider -->
+
+				</div>
+			</div>
 		</section>
 
 		<section class="main-nav">
@@ -70,16 +136,17 @@
 							<a href="#" class="button grey">show all</a>
 						</div>
 						<div class="row">
+
 							<!-- Auction Item -->
 							<div class="small-12 medium-4 columns">
-								<article class="slideUp">
+								<article class="slideUp featured">
 									<div class="thumbnail">
 										<a href="#" title="">
 											<img src="img/item-bg-1.jpg" alt="Thumbnail" />
 										</a>
 										<div class="timer-wrap">
-											<span class="timer-label">Time left:</span>
-											<div class="timer" data-time="June 20, 2015 20:05:35"></div>
+											<span>Time left: </span>
+											<div class="timer">123</div>
 										</div>
 									</div>
 									<div class="item-content">
@@ -105,8 +172,8 @@
 											<img src="img/item-bg-2.jpg" alt="Thumbnail" />
 										</a>
 										<div class="timer-wrap">
-											Time left:
-											<div class="timer" data-time="June 18, 2015 12:15:42"></div>
+											<span>Time left: </span>
+											<div class="timer" data-time="June 28, 2015 12:15:42"></div>
 										</div>
 									</div>
 									<div class="item-content">
@@ -132,8 +199,8 @@
 											<img src="img/item-bg-3.jpg" alt="Thumbnail" />
 										</a>
 										<div class="timer-wrap">
-											Time left:
-											<div class="timer" data-time="June 19, 2015 00:30:10"></div>
+											<span>Time left: </span>
+											<div class="timer" data-time="June 18, 2015 00:30:10"></div>
 										</div>
 									</div>
 									<div class="item-content">
@@ -164,6 +231,7 @@
 							<a href="#" class="button grey">show all</a>
 						</div>
 						<div class="row">
+
 							<!-- Auction Item -->
 							<div class="small-12 medium-4 columns">
 								<article class="slideUp">
@@ -171,6 +239,37 @@
 										<a href="#" title="">
 											<img src="img/item-bg-default.jpg" alt="Thumbnail" />
 										</a>
+										<div class="timer-wrap">
+											<span>Time left: </span>
+											<div class="timer" data-time="June 28, 2015 11:12:42"></div>
+										</div>
+									</div>
+									<div class="item-content">
+										<h3 class="text-overflow">Auction Name</h3>
+										<p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit. Illum voluptatem quis.</p>
+										<div class="row">
+											<div class="small-12 large-6 columns">
+												<a href="#" class="button expand" title="Find out more">Find out more</a>
+											</div>
+											<div class="small-12 large-6 columns">
+												<span>Worth up to <strong>200$</strong></span>
+											</div>
+										</div>
+									</div>
+								</article>
+							</div>
+
+							<!-- Auction Item -->
+							<div class="small-12 medium-4 columns">
+								<article class="slideUp featured">
+									<div class="thumbnail">
+										<a href="#" title="">
+											<img src="img/item-bg-default.jpg" alt="Thumbnail" />
+										</a>
+										<div class="timer-wrap">
+											<span>Time left: </span>
+											<div class="timer" data-time="June 28, 2015 13:15:12"></div>
+										</div>
 									</div>
 									<div class="item-content">
 										<h3 class="text-overflow">Auction Name</h3>
@@ -194,29 +293,10 @@
 										<a href="#" title="">
 											<img src="img/item-bg-default.jpg" alt="Thumbnail" />
 										</a>
-									</div>
-									<div class="item-content">
-										<h3 class="text-overflow">Auction Name</h3>
-										<p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit. Illum voluptatem quis.</p>
-										<div class="row">
-											<div class="small-12 large-6 columns">
-												<a href="#" class="button expand" title="Find out more">Find out more</a>
-											</div>
-											<div class="small-12 large-6 columns">
-												<span>Worth up to <strong>200$</strong></span>
-											</div>
+										<div class="timer-wrap">
+											<span>Time left: </span>
+											<div class="timer" data-time="June 28, 2015 02:02:36"></div>
 										</div>
-									</div>
-								</article>
-							</div>
-
-							<!-- Auction Item -->
-							<div class="small-12 medium-4 columns">
-								<article class="slideUp">
-									<div class="thumbnail">
-										<a href="#" title="">
-											<img src="img/item-bg-default.jpg" alt="Thumbnail" />
-										</a>
 									</div>
 									<div class="item-content">
 										<h3 class="text-overflow">Auction Name</h3>
@@ -246,13 +326,18 @@
 							<a href="#" class="button grey">show all</a>
 						</div>
 						<div class="row">
+
 							<!-- Auction Item -->
 							<div class="small-12 medium-4 columns">
-								<article class="slideUp">
+								<article class="slideUp last-one">
 									<div class="thumbnail">
 										<a href="#" title="">
 											<img src="img/item-bg-default.jpg" alt="Thumbnail" />
 										</a>
+										<div class="timer-wrap">
+											<span>Time left: </span>
+											<div class="timer" data-time="June 28, 2015 05:24:33"></div>
+										</div>
 									</div>
 									<div class="item-content">
 										<h3 class="text-overflow">Auction Name</h3>
@@ -276,6 +361,10 @@
 										<a href="#" title="">
 											<img src="img/item-bg-4.jpg" alt="Thumbnail" />
 										</a>
+										<div class="timer-wrap">
+											<span>Time left: </span>
+											<div class="timer" data-time="June 28, 2015 05:11:55"></div>
+										</div>
 									</div>
 									<div class="item-content">
 										<h3 class="text-overflow">Auction Name</h3>
@@ -299,6 +388,10 @@
 										<a href="#" title="">
 											<img src="img/item-bg-default.jpg" alt="Thumbnail" />
 										</a>
+										<div class="timer-wrap">
+											<span>Time left: </span>
+											<div class="timer" data-time="June 18, 2015 11:15:42"></div>
+										</div>
 									</div>
 									<div class="item-content">
 										<h3 class="text-overflow">Auction Name</h3>
@@ -318,6 +411,23 @@
 					</div>
 				</div>
 			</section>
+
+			<!-- Pagination -->
+			<div class="row">
+				<div class="small-12 columns">
+					<div class="pagination-wrap">
+						<ul class="pagination">
+							<li class="arrow unavailable"><a href="#" title="">&laquo;</a></li>
+							<li class="current"><a href="#" title="">1</a></li>
+							<li><a href="#" title="">2</a></li>
+							<li><a href="#" title="">3</a></li>
+							<li class="unavailable"><a href="#" title="">&hellip;</a></li>
+							<li><a href="#" title="">12</a></li>
+							<li class="arrow"><a href="#" title="">&raquo;</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
 
 			<!-- Contact form -->
 			<section class="contact-form">
@@ -399,9 +509,20 @@
 		</footer>
 
 		<script src="js/vendor/jquery.js"></script>
+		<script src="js/vendor/jquery.easing.min.js"></script>
 		<script src="js/vendor/stylish-select.js"></script>
 		<script src="js/vendor/jquery.countdown.js"></script>
+		<script src="js/vendor/slick.min.js"></script>
+		<script src="js/vendor/lightbox.min.js"></script>
+		<script src="js/vendor/masterslider.min.js"></script>
 		<script src="js/foundation.min.js"></script>
 		<script src="js/script.js"></script>
+
+		<script type="text/javascript">
+
+
+
+		</script>
+
 	</body>
 </html>
