Added a new page foxy-forms

--- a/foxy-sub.html
+++ b/foxy-sub.html
@@ -171,7 +171,7 @@
 												</div>
 											</div>
 											<div class="small-6 medium-7 columns">
-												<a href="#" class="button expand" title="Bid Now!">Bid now!</a>
+												<a href="#" class="button large expand" title="Bid Now!">Bid now!</a>
 											</div>
 										</div>
 									</div>
