--- a/foxy-forms.html
+++ b/foxy-forms.html
@@ -98,7 +98,7 @@
 										<div class="field">
 											<textarea placeholder="Placeholder text"></textarea>
 										</div>
-										<button type="submit" class="button right" data-modal="popup-1">Submit</button>
+										<button type="submit" class="button right">Submit</button>
 									</form>
 								</div>
 								<div class="small-12 medium-6 columns">
